--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Feature 1</title>
     <title>Feature 1 testing sample</title>
+    <title>Testing trial1</title>
+
+    <title>Testing trial</title>
   </head>
   <body></body>
 </html>
